<resources>
    <string name="app_name">Travel Planner</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="input_username">Username</string>
    <string name="input_email">Email</string>
    <string name="input_password">Password</string>
    <string name="input_destination">Any travel idea?</string>
    <string name="input_destination_autofill">ABC</string>
    <string name="button_loginUser">Login</string>
    <string name="button_createUser">Create Account</string>
    <string name="logout">Logout</string>
    <string name="current_location">Current Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="get_location">Explore Nearby</string>
    <string name="search">Travel inspirations</string>
    <string name="title_activity_gpt">GptActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="loading">Loading... Please wait a second</string>

    <string name="button_add_profile">Save</string>
    <string name="username">Username</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="no_user_profile_warning">No User Profile</string>
    <string name="edit_user_profile_button">Edit User Profile</string>
    <string name="detect">detect</string>
    <string name="numDays">#Days</string>
    <string name="tag2">Hawaii</string>
    <string name="tag1">Alps</string>
</resources>