<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/username_text"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="450dp"
        android:autofillHints="username"
        android:hint="@string/input_username"
        android:inputType="text"
        android:minHeight="48dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:autofillHints="password"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/username_text"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_text"
        app:layout_constraintTop_toBottomOf="@+id/username_text" />

    <Button
        android:id="@+id/new_user_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="launchMain"
        android:layout_marginTop="16dp"
        android:text="@string/button_createUser"
        app:layout_constraintEnd_toEndOf="@+id/password_text"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/password_text"
        app:layout_constraintTop_toBottomOf="@+id/password_text" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:onClick="launchTest"
        android:text="@string/button_loginUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/new_user_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/new_user_button"
        app:layout_constraintTop_toBottomOf="@+id/new_user_button"
        app:layout_constraintVertical_bias="0.063" />

</androidx.constraintlayout.widget.ConstraintLayout>